--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "nodemon": "^3.0.2"
   }
 }
