--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2"
   }
 }
